crates/solidity/testing/snapshots/bindings_output/using/elementary/generated/0.7.1-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected ContractKeyword or EnumKeyword or FunctionKeyword or ImportKeyword or InterfaceKeyword or LibraryKeyword or PragmaKeyword or StructKeyword.
   ╭─[ input.sol:3:1 ]
   │
 3 │ ╭─▶ using {square} for int;
   ┆ ┆   
 7 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
[39mReferences and definitions:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ function square(int value) returns (int) {}
   │          ───┬──     ──┬──  
   │             ╰────────────── name: 1
   │                       │    
   │                       ╰──── name: 2
───╯
[39mDefiniens:[0m 
   ╭─[ input.sol:1:1 ]
   │
 1 │ function square(int value) returns (int) {}
   │ ────────────────────┬─┬─────────────────────  
   │                     ╰───────────────────────── definiens: 2
   │                       │                       
   │                       ╰─────────────────────── definiens: 1
───╯
